Grammar/tests/unity/success/struct-use-without-typedef.top
start () {

    struct StudentCard{
        string name;
        string course;
        float exam_1;
        float exam_2;  
    };

    var {
        struct StudentCard student;  
    }

    student.name = "Joaozinho";

}
