Grammar/tests/unity/error/struct-extends.top
start () {

    struct Students{
        string nome;
        float math, physics, mean;
    };

    struct ComputerStudents extends{
        float algorithm, compiler;
    }

}